Added and modify some files

--- a/nodeServers/HTML-files/about.html
+++ b/nodeServers/HTML-files/about.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>About</h1>
+    <a href="/">Home</a>
     <p>My name is Thanuja Nipun Rajawardhana. I am a student of SLIIT. I am currently following the IT degree program. I am in the batch of 2022/NOV. My student ID is IT22063564.</p>
 </body>
 </html>
