--- a/nodeServers/HTML-files/index.html
+++ b/nodeServers/HTML-files/index.html
@@ -10,5 +10,6 @@
     <p>Student ID: IT22063564</p>
     <p>Batch: 2022/NOV</p>
     <p>University: SLIIT</p>
+    <a href="/about">About</a>
 </body>
 </html>
